Correction biblio + diagrame LOD

--- a/documents/rapport/biblio.bib
+++ b/documents/rapport/biblio.bib
@@ -1,39 +1,39 @@
 @article{CDLOD,
-author = { Filip   Strugar },
-title = {Continuous Distance-Dependent Level of Detail for Rendering Heightmaps},
-journal = {Journal of Graphics, GPU, and Game Tools},
-volume = {14},
-number = {4},
-pages = {57-74},
-year  = {2009},
-publisher = {Taylor & Francis},
-doi = {10.1080/2151237X.2009.10129287},
-URL = {
-        https://doi.org/10.1080/2151237X.2009.10129287
-},
-eprint = {
-        https://doi.org/10.1080/2151237X.2009.10129287
-}
+  author = { Filip   Strugar },
+  title = {Continuous Distance-Dependent Level of Detail for Rendering Heightmaps},
+  journal = {Journal of Graphics, GPU, and Game Tools},
+  volume = {14},
+  number = {4},
+  pages = {57-74},
+  year  = {2009},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/2151237X.2009.10129287},
+  URL = {
+https://doi.org/10.1080/2151237X.2009.10129287
+  },
+  eprint = {
+https://doi.org/10.1080/2151237X.2009.10129287
+  }
 }
 
 @article{NTTMIALQ,
- author = {Lee, Michael and Samet, Hanan},
- title = {Navigating Through Triangle Meshes Implemented As Linear Quadtrees},
- journal = {ACM Trans. Graph.},
- issue_date = {April 2000},
- volume = {19},
- number = {2},
- month = apr,
- year = {2000},
- issn = {0730-0301},
- pages = {79--121},
- numpages = {43},
- url = {http://doi.acm.org/10.1145/343593.343598},
- doi = {10.1145/343593.343598},
- acmid = {343598},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {data structures, finite element analysis, hierarchical methods, neighbor finding, ray tracing, spherical modeling, triangle meshes},
+  author = {Lee, Michael and Samet, Hanan},
+  title = {Navigating Through Triangle Meshes Implemented As Linear Quadtrees},
+  journal = {ACM Trans. Graph.},
+  issue_date = {April 2000},
+  volume = {19},
+  number = {2},
+  month = apr,
+  year = {2000},
+  issn = {0730-0301},
+  pages = {79--121},
+  numpages = {43},
+  url = {http://doi.acm.org/10.1145/343593.343598},
+  doi = {10.1145/343593.343598},
+  acmid = {343598},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {data structures, finite element analysis, hierarchical methods, neighbor finding, ray tracing, spherical modeling, triangle meshes},
 }
 
 @article{PathFinding,
@@ -45,27 +45,27 @@ eprint = {
   year={2011}
 }
 
-@misc{PlanetRenderer,
-	HOWPUBLISHED = "\url{http://robert-lindner.com/blog/category/project/planet-renderer/}",
-	AUTHOR = "Robert, Lindner",
-	TITLE = "Planet Renderer",
-	YEAR = "2016",
-	NOTE = "Accédé en Janvier 2018"
+@misc{PlanetRenderer, 
+  HOWPUBLISHED = "\url{http://robert-lindner.com/blog/category/project/planet-renderer/}",
+  AUTHOR = "Robert, Lindner",
+  TITLE = "Planet Renderer",
+  YEAR = "2016",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @misc{Heightmaps,
-	HOWPUBLISHED = "\url{http://chrisbrough.com/project/2012/04/Quadtree-Level-of-Detail-for-Heightmaps/}",
-	AUTHOR = "Chris, Brough",
-	TITLE = "Quadtree Level of Detail for Heightmaps",
-	YEAR = "2012",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED = "\url{http://chrisbrough.com/project/2012/04/Quadtree-Level-of-Detail-for-Heightmaps/}",
+  AUTHOR = "Chris, Brough",
+  TITLE = "Quadtree Level of Detail for Heightmaps",
+  YEAR = "2012",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @misc{libnoise,
-	HOWPUBLISHED = "\url{http://libnoise.sourceforge.net/examples/complexplanet/index.html}",
-	AUTHOR = "Jason Bevins",
-	TITLE = "libnoise Example: Complex planetary surface",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED = "\url{http://libnoise.sourceforge.net/examples/complexplanet/index.html}",
+  AUTHOR = "Jason Bevins",
+  TITLE = "libnoise Example: Complex planetary surface",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @inproceedings{MassiveTerrain,
@@ -105,34 +105,34 @@ eprint = {
 }
 
 @misc{WorldGenerator,
-	HOWPUBLISHED = "\url{http://leifnode.com/2014/04/planetary-scale-lod-terrain-generation/}",
-	AUTHOR = "Leif Erkenbrach",
-	TITLE = "World-Generator",
-	YEAR = "2014",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED = "\url{http://leifnode.com/2014/04/planetary-scale-lod-terrain-generation/}",
+  AUTHOR = "Leif Erkenbrach",
+  TITLE = "World-Generator",
+  YEAR = "2014",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @misc{Cube2Sphere,
-	HOWPUBLISHED = "\url{http://mathproofs.blogspot.fr/2005/07/mapping-cube-to-sphere.html}",
-	AUTHOR = "Leif Erkenbrach",
-	TITLE = "World-Generator",
-	YEAR = "2014",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED = "\url{http://mathproofs.blogspot.fr/2005/07/mapping-cube-to-sphere.html}",
+  AUTHOR = "Philip Nowell",
+  TITLE = "Mapping a cube to a sphere",
+  YEAR = "2005",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @misc{EvoGPU,
-	HOWPUBLISHED =
-          "\url{http://www.nvidia.com/content/gtc-2010/pdfs/2275_gtc2010.pdf}",
-	AUTHOR = "Ian Buck, San Jose",
-	TITLE = "The Evolution of GPUs for General Purpose Computing",
-	YEAR = "2010",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED =
+    "\url{http://www.nvidia.com/content/gtc-2010/pdfs/2275_gtc2010.pdf}",
+  AUTHOR = "Ian Buck, San Jose",
+  TITLE = "The Evolution of GPUs for General Purpose Computing",
+  YEAR = "2010",
+  NOTE = "Accédé en Janvier 2018"
 }
 
 @misc{Simplexnoise,
-	HOWPUBLISHED = "\url{http://weber.itn.liu.se/~stegu/simplexnoise/simplexnoise.pdf}",
-	AUTHOR = "Stefan Gustavson",
-	TITLE = "Simplex noise demystified",
-	YEAR = "2005",
-	NOTE = "Accédé en Janvier 2018"
+  HOWPUBLISHED = "\url{http://weber.itn.liu.se/~stegu/simplexnoise/simplexnoise.pdf}",
+  AUTHOR = "Stefan Gustavson",
+  TITLE = "Simplex noise demystified",
+  YEAR = "2005",
+  NOTE = "Accédé en Janvier 2018"
 }
