Dimension 2 / deux dimensions + lods.png

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -339,8 +339,8 @@ semaines.\\
 
 \subsection{Structure de donnée}
 
-Les cartes de hauteur seront stockées dans des tableaux de flottant de
-dimension deux. Ainsi cela nous laisse une certaine marge de manœuvre
+Les cartes de hauteur seront stockées dans des tableaux de flottant à
+deux dimensions. Ainsi cela nous laisse une certaine marge de manœuvre
 sur la précision des hauteurs. Chaque hauteur prendra donc 4 octets dans
 la mémoire vive. Nous estimons que la taille total de l'arbre dans la
 mémoire sera de l'ordre de la centaine de Mo.\\
