Partie Découpage des tâches + gantt

--- a/documents/rapport/main.tex
+++ b/documents/rapport/main.tex
@@ -427,7 +427,7 @@ ses plus proches voisins.
 \end{center}
 
 Comme montré dans la figure \ref{fig:tache}, le projet peut être découpé en quatre grandes parties.
-Chaque partie est indépendante et parallélisable.
+Chaque partie est indépendante et parallélisable. Chaque tâche peut aussi être divisée, le diagramme de Gannt ci-contre (figure \ref{fig:gantt}) montre la répartition précise des tâche ainsi qu'un découpage du projet en fonction du temps.
 
 \begin{center}
 \begin{figure}[!h]
