--- a/documents/rapport/rapport/main.tex
+++ b/documents/rapport/rapport/main.tex
@@ -133,7 +133,8 @@ Boris \textsc{Mansencal}
 
 
 
-\end{document}
+
+
 
 
 
@@ -142,3 +143,77 @@ Boris \textsc{Mansencal}
 %-----------------------------------------------------------------%
 
 
+\newpage
+
+\chapter*{Algorithme CDLOD}
+\addcontentsline{toc}{chapter}{Algorithme CDLOD}
+
+L'algortihme \textbf{CDLOD}, pour "Continuous Distance-Dependent Level of Detail for Rendering Heightmaps " ( 
+Niveau de détail continu dépendant de la distance pour le rendue de carte de hauteur") par Filip Strugar, est un algorithme qui comme sont nom l'indique, se base sur la distance pour l'affichage du niveau de détail (\textbf{LOD}) basé sur une carte de hauteur (\textbf{Heightmaps}).
+
+De nombreux algorithme se servent de niveau de détail pour générer leur terrain mais un des problèmes majeurs auxquels ils se confrontent viens dès lors de la séparation entre deux niveau de détail voisins. 
+\begin{wrapfigure}[5]{r}{6cm}
+\includegraphics[width=6cm]{img/seams.png}
+  \caption{Discontinuité}
+  \label{fig:seams}
+  \source {http://mikejsavage.co.uk/blog/geometry-clipmaps.html}
+\end{wrapfigure}
+
+\vspace{0.5cm}
+En effet la différence d'élévation entre chaque divisions peuvent provoqué une discontinuité provoquant ainsi une zone vide, comme on peut le voir, par la zone rouge indiqué sur cette image. 
+
+
+\vspace{3.2cm}
+La méthode utilisé en général est de palier cette discontinuité en rajoutant des connexions entre les niveaux affectés. Cette solution à de nombreux inconvéniant, en rajoutant des connexions de cet manière, lors du rendue et du parcours du terrain ,ces connexions vont alors apparaitre brusquement perturbant ainsi la fluidité. À cela viennent s'ajouter la possibilité d'avoir des connexions multiple superposé et également un cout de rendue suplémentaire en terme de calcul et de mémoire.
+
+Pour résoudre ce problème l'algorithme CDLOD va ici venir se servir de "transitions" entre les niveaux de détails par une méthode dites de "morphing"
+
+\end{document}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%-----------------------------------------------------------------%
+%   END
+%-----------------------------------------------------------------%
+
+\end{document}
